build/k8s/qa/get-ai-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: getai-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "{ingress-host}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mlflow-server
            port: 
              number: 5000
